--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb+srv://Mandeep:1402backspace1402@cluster0.ox0kv.mongodb.net/maimtlmsdb?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb://127.0.0.1:27017/maimtlmsdb
 JWT_SECRET=m@nD33p@k$H@yy@sh1k@_!2025_XYz9*~PQR$8zQ6
 
 
